// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-back-to-top should render when target starts with #: should render when target starts with # 1`] = `
<ic-back-to-top target="#topEl">
  <mock:shadow-root>
    <ic-button class="ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
      <mock:shadow-root>
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </mock:shadow-root>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </mock:shadow-root>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render with an icon only: should render with an icon only 1`] = `
<ic-back-to-top target="topEl" variant="icon">
  <mock:shadow-root>
    <ic-button class="ic-button-size-large ic-button-variant-icon icon-only" exportparts="button">
      <mock:shadow-root>
        <ic-tooltip label="Back to top" placement="bottom" silent="" target="ic-button-with-tooltip-8">
          <button aria-label="Back to top" class="button" part="button" type="button">
            <slot></slot>
          </button>
        </ic-tooltip>
      </mock:shadow-root>
      <span class="ic-back-to-top-icon">
        svg
      </span>
    </ic-button>
  </mock:shadow-root>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render with footer: should render with footer 1`] = `
<body>
  <div id="ic-back-to-top-target" tabindex="-1"></div>
  <div id="topEl">
    <ic-back-to-top target="topEl">
      <mock:shadow-root>
        <ic-button class="ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
          <mock:shadow-root>
            <button aria-label="Back to top" class="button" part="button" type="button">
              <slot></slot>
            </button>
          </mock:shadow-root>
          <span class="ic-back-to-top-icon">
            svg
          </span>
          Back to top
        </ic-button>
      </mock:shadow-root>
    </ic-back-to-top>
  </div>
  <ic-footer class="ic-footer ic-footer-foreground-light ic-footer-light ic-footer-sparse ic-footer-ungrouped">
    <mock:shadow-root>
      <footer>
        <div class="footer-compliance">
          <ic-section-container aligned="left" fullheight="">
            <div class="footer-compliance-inner">
              <div class="footer-copyright">
                <ic-typography variant="label-uppercase">
                  © Crown Copyright
                </ic-typography>
              </div>
            </div>
          </ic-section-container>
        </div>
      </footer>
    </mock:shadow-root>
  </ic-footer>
</body>
`;

exports[`ic-back-to-top should render with no targetId set: should render with no targetId set 1`] = `
<ic-back-to-top>
  <mock:shadow-root>
    <ic-button class="ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
      <mock:shadow-root>
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </mock:shadow-root>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </mock:shadow-root>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render: should render 1`] = `
<ic-back-to-top target="topEl">
  <mock:shadow-root>
    <ic-button class="ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
      <mock:shadow-root>
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </mock:shadow-root>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </mock:shadow-root>
</ic-back-to-top>
`;
